--- a/backend/public/login.html
+++ b/backend/public/login.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <title>Login | Campus Connect</title>
-  <link rel="stylesheet" href="style.css">
+
+  <!-- ✅ FIXED -->
+  <link rel="stylesheet" href="/css/style.css">
 </head>
 <body class="auth-body">
 
@@ -11,6 +13,7 @@
   <h2>Campus Connect</h2>
   <p class="subtitle">Welcome back 👋</p>
 
+  <!-- ✅ CORRECT (Backend Route) -->
   <form action="/login" method="post">
     <input type="email" name="email" placeholder="Email address" required>
     <input type="password" name="password" placeholder="Password" required>
@@ -18,6 +21,7 @@
   </form>
 
   <p class="switch">
+    <!-- ✅ ALREADY CORRECT -->
     New here? <a href="/register.html">Create account</a>
   </p>
 </div>
